# networkmanager

./: .travis.yml  AUTHORS.md  CMakeLists.txt  README.md  networkmanager.qbs
.github/workflows/: build.yml
.github/workflows/scripts/: build-deps
.reuse/: dep5
.travis/: build.sh
.tx/: config  sources.json
scripts/: txpull.sh  txpush.sh  update_qmltypes.sh
src/imports/networkmanager/: CMakeLists.txt  connectionicon.cpp  connectionmodel.cpp  connectionmodel.h  connectionsettings.cpp  connectionsettings.h  debug.cpp  ipv4settings.cpp  ipv4settings.h  networking.cpp  networking.h  networkmanager.qbs  networkmodel.cpp  networkmodel.h  networkmodelitem.cpp  networkmodelitem.h  networksettings.cpp  networksettings.h  plugin.cpp  plugins.qmltypes  qmldir  security8021xsettings.cpp  security8021xsettings.h  technologyproxymodel.cpp  technologyproxymodel.h  uiutils.cpp  uiutils.h  wiredsettings.cpp  wiredsettings.h  wirelesssettings.cpp  wirelesssettings.h
src/indicator/contents/: AirplaneMode.qml  ConnectionItem.qml  main.qml
src/indicators/networkmanager/: CMakeLists.txt  metadata.desktop  metadata.desktop.in  networkmanager.qbs
src/indicators/networkmanager/contents/: Connection.qml  ConnectionItem.qml  main.qml
src/indicators/networkmanager/translations/: metadata_ar.desktop  metadata_de.desktop  metadata_id.desktop  (+20 more)
src/settings/contents/: WiredPage.qml
src/settings/networkmanager/: CMakeLists.txt  metadata.desktop  metadata.desktop.in  networkmanager.qbs
src/statusarea/networkmanager/: CMakeLists.txt  metadata.desktop  metadata.desktop.in
translations/indicator/: metadata.pot  metadata_ar.desktop  metadata_da.desktop  metadata_da.po  metadata_de.desktop  metadata_es_419.desktop  metadata_fr.desktop  metadata_hye.po  metadata_it_IT.po  metadata_lt.desktop  metadata_lt.po  metadata_nl.desktop  metadata_pt_BR.desktop  metadata_pt_BR.po  metadata_ru_RU.po  metadata_tr.desktop  metadata_tr.po  networkmanager.ts  networkmanager_ar.ts  networkmanager_da.ts  networkmanager_es_419.ts  networkmanager_hye.ts  networkmanager_id.ts  networkmanager_it.ts  networkmanager_nl.ts  networkmanager_pl.ts  networkmanager_pt_BR.ts  networkmanager_ru.ts  networkmanager_ru_RU.ts  networkmanager_sk.ts  networkmanager_tr.ts
translations/settings/: metadata.pot  metadata_ast.desktop  metadata_ast_ES.desktop  metadata_da.po  metadata_da_DK.desktop  metadata_de.desktop  metadata_de.po  metadata_es_419.desktop  metadata_fr.desktop  metadata_hu.desktop  metadata_hye.po  metadata_it_IT.po  metadata_ja.desktop  metadata_ja_JP.desktop  metadata_lt.desktop  metadata_lt.po  metadata_pl.desktop  metadata_pt_BR.po  metadata_ru_RU.po  metadata_tr.desktop  metadata_tr.po  metadata_tr_TR.desktop  metadata_zh_CN.po  networkmanager.ts  networkmanager_ar.ts  networkmanager_ast.ts  networkmanager_ast_ES.ts  networkmanager_ca.ts  networkmanager_cs_CZ.ts  networkmanager_da.ts  networkmanager_de.ts  networkmanager_el.ts  networkmanager_es.ts  networkmanager_es_419.ts  networkmanager_es_MX.ts  networkmanager_fr.ts  networkmanager_hr_HR.ts  networkmanager_hu.ts  networkmanager_hye.ts  networkmanager_id.ts  (+16 more)
translations/statusarea/: metadata.pot  metadata_de.po  metadata_hye.po  metadata_it_IT.po  metadata_lt.po  metadata_ru_RU.po  metadata_tr.po  metadata_zh_CN.po  networkmanager.ts  networkmanager_ar.ts  networkmanager_da.ts  networkmanager_de.ts  networkmanager_es_419.ts  networkmanager_fr.ts  networkmanager_hye.ts  networkmanager_id.ts  networkmanager_it.ts  networkmanager_it_IT.ts  networkmanager_lt.ts  networkmanager_nl.ts  networkmanager_pl.ts  networkmanager_pt_BR.ts  networkmanager_ru.ts  networkmanager_ru_RU.ts  networkmanager_sk.ts  networkmanager_tr.ts  networkmanager_zh_CN.ts
(+76 files in other folders)
